gitops/websites/apolline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: apolline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apolline-web
  template:
    metadata:
      labels:
        app: apolline-web
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: registry.rupan.dev/apps/apolline@sha256:5ae14a4d5950287a8736f99c39871f6f8a0fdb67c99dde9e2baf6e83fd714b91  # yamllint disable-line rule:line-length
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
